infrastructure/monitoring/prometheus/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: kube-prometheus-stack
  name: grafana-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.krosf.com`)
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          port: http-web
